<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layBlock"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:gravity="center"
    android:background="@color/popup_transparent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/layBody"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/review_title"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/review_point"
                    />

                <RadioGroup
                    android:id="@+id/rdgPoint"
                    android:orientation="horizontal"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp">

                    <RadioButton
                        android:id="@+id/rd1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="1P"
                        />

                    <RadioButton
                        android:id="@+id/rd2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        android:text="2P"
                        />

                    <RadioButton
                        android:id="@+id/rd3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        android:text="3P"
                        />

                    <RadioButton
                        android:id="@+id/rd4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        android:text="4P"
                        />

                    <RadioButton
                        android:id="@+id/rd5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        android:text="5P"
                        />

                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/editContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="top|start"
                android:lines="4"
                android:maxLines="6"
                android:minLines="4"
                android:scrollbars="vertical"
                android:textSize="14sp"
                android:textColorHint="@color/sub_text_color"
                android:inputType="textMultiLine|text"
                />

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="12sp"
                android:textColor="@color/error_text_color"
                android:text="@string/default_text"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0px"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/button_cancel"
                    />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="0px"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/button_save"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
